* legacy_driver::devices_used was not taken into account when deciding to   unload a driver. This was causing bug #4608 depending on the order of events;   now you should have less worries removing your USB device before having it   unmounted. * Added a "legacy_device" KDL command.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41119 a95241bf-73f2-0310-859d-f6bbb57e9c96